--- a/404.html
+++ b/404.html
@@ -26,6 +26,10 @@
 
 <title>𝒊 𝒍𝒐𝒗𝒆 𝒚𝒐𝒖</title>
 
+<script language= "JavaScript">
+location.href="https://love.pooftie.me"
+</script>
+
 <head>
 <link rel="shortcut icon" href="favicon.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
