--- a/404.html
+++ b/404.html
@@ -46,8 +46,6 @@ location.href="https://love.pooftie.me"
 <meta name="url" content="https://love.pooftie.me">
 <meta name="identifier-URL" content="https://love.pooftie.me">
 <meta name="thumbnail" content="https://middlepot.com/img/forever.jpg">
-<img src="https://middlepot.com/img/forever.jpg"
-alt="love.pooftie.me banner thumbnail preview main image" style="display:none">
 <meta property="og:url" content="https://love.pooftie.me">
 <meta property="og:title" content="╰♡╯">
 <meta property="og:site_name" content="love.pooftie.me">
@@ -173,7 +171,7 @@ body { position: absolute; zoom: 85%; left:-120px; top:0px;}
 <div id="everything">
 
 
-<body oncontextmenu="return false" ondragstart="return false" style="background-image:url(bg.jpg); background-repeat: no-repeat; background-size: cover; background-attachment: fixed; font-family: Calibri; font-size: 13px; letter-spacing:1px; color:#fff; text-shadow: 0 0 2px #967d78;">
+<body oncontextmenu="return false" ondragstart="return false" style="background-image:url(bg.jpg); background-repeat: no-repeat; background-size: cover; background-attachment: fixed; font-family: Calibri; font-size: 13px; letter-spacing:1px; color:#fff; text-shadow: 0 0 2px #967d78;"><img src="https://middlepot.com/img/forever.jpg" alt="love.pooftie.me banner thumbnail preview main image" style="display:none">
 
 <img ondragstart="return false" width="650px" height="auto" style="position:absolute; left:330px; top:10px; z-index:1;" src="teddies.png">
 
