--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@ location.href="https://love.pooftie.me"
 <meta name="robots" content="max-image-preview:standard">
 <meta name="title" content="╰♡╯">
 <meta name="description" content="𝒊 𝒍𝒐𝒗𝒆 𝒚𝒐𝒖">
-<meta name="theme-color" content="#f7ece9">
+<meta name="theme-color" content="#fefbfb">
 <meta name="url" content="https://love.pooftie.me">
 <meta name="identifier-URL" content="https://love.pooftie.me">
 <meta name="thumbnail" content="https://middlepot.com/img/forever.jpg">
